<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/settings_ime"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnLang1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/lang1"
                    android:src="@drawable/ic_counter_1_off_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/language"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spnrLanguage1_ime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnLang2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/lang2"
                    android:src="@drawable/ic_counter_2_off_36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/language"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spnrLanguage2_ime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mode_chinese_ime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/simple_chinese"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/mode_simple_chinese_ime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/simple_chinese"
                    android:minHeight="0dp"
                    android:minWidth="0dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/settings_voice_input"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/layout_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spnrLanguage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_mode_chinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/simple_chinese"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/mode_simple_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/simple_chinese"
                    android:minHeight="0dp"
                    android:minWidth="0dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/settings_general"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/settings_minimum_silence"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/settings_min_silence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="100"
                android:valueFrom="0"
                android:valueTo="3000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/settings_max_recording_duration"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/settings_max_recording_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="30"
                android:valueFrom="30"
                android:valueTo="300" />

            <LinearLayout
                android:id="@+id/layout_mode_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/setting_bluetooth"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/mode_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/setting_bluetooth"
                    android:minHeight="0dp"
                    android:minWidth="0dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/settings_word_replacements"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_manage_replacements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replacement_manage" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
